--- a/angular.json
+++ b/angular.json
@@ -41,7 +41,7 @@
               "node_modules/ngx-toastr/toastr.css"
             ],
             "server": "src/main.server.ts",
-            "outputMode": "server",
+            "outputMode": "static",
             "ssr": {
               "entry": "src/server.ts"
             }
